# CARIBOU

./: .gitignore  README.md  requirements.txt  single_prompt_test
caribou/: LICENSE  README.md  pyproject.toml
caribou/src/caribou/: config.py
caribou/src/caribou/agents/: AgentSystem.py  caribou_fully_connected.json  create_agent_system.py  dataset_metadata_agent.json  integration_system.json  olaf.json  olaf_fully_connected.json  olaf_fully_connected_v2.json  olaf_single_agent.json  system_blueprint.json
caribou/src/caribou/auto_metrics/: AutoMetric.py  BatchCorrectionBenchmarkMetric.py  CellCountMetric.py  CellTypingMetric.py  DEGBenchmarkMetric.py  DataAdequacyBenchmarkMetric.py  DoubletBenchmarkMetric.py  FullQCBenchmarkMetric.py  GeneralIntegrationMetrics.py  IntegrationMetrics.py  LoadDataMetric.py  QCBenchmarkMetric.py  __init__.py  registry.py
caribou/src/caribou/cli/: config_cli.py  create_agent_cli.py  datasets_cli.py  main.py  run_cli.py  utils_cli.py
caribou/src/caribou/code_samples/: Celltyping.py  DGE  DataCheck.py  Doublets.py  Downstream.py  Downstream_gpu.py  Integrate_Harmony.py  Integrate_scvi.py  MAD.py  QC_Inspection.py  QC_umap_visualization.py  Re-analysis_afterQC.py  Re-analysis_afterQC_gpu.py  gene_check.py  load_adata.py  (+1 more)
caribou/tests/: QUICKSTART.md  README.md  __init__.py  conftest.py  pytest.ini  run_tests.sh
caribou/tests/integration/: __init__.py  test_message_flow.py
caribou/tests/unit/: __init__.py  test_agent_system.py  test_anthropic_wrapper.py  test_memory_manager.py  test_message_utils.py  test_ollama_wrapper.py
(+264 files in other folders)
