[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "caribou-cli"
version = "0.1.2"
description = "Computational AI Research Interface for Bioinformatics, Omics, and Unifying Agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dylan Riffle"}, {name = "Nima Shirooni"}]
# Core runtime deps (PyPI names!)
dependencies = [
  "cellxgene-census",
  "tiledbsoma",
  "rich",
  "numpy",
  "docker",           # a.k.a. docker-py
  "python-dotenv",    # NOTE: PyPI name is 'python-dotenv' (import is 'dotenv')
  "openai",
  "jupyter-client",   # NOTE: PyPI name has a hyphen
  "nbformat",
  "typer",
  "platformdirs",
  "sentence_transformers",
  "tf_keras"
]

# If you want a command like `caribou …`
[project.scripts]
caribou = "caribou.cli.main:main"

# Optional extras (install with: pip install .[dev])
[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "ipykernel"
]

# If you’re using a src/ layout, tell Hatch where packages live.
[tool.hatch.build.targets.wheel]
packages = ["src/caribou"]